2010-09-15  Murray Cumming  <murrayc@murrayc.com>

	WrapBox: Adapt to C API change.

	* gtk/src/wrapbox.[hg|ccg]: insert_child(): Remove the padding parameters
  (now in Widget instead) to fix the build.

2010-09-15  Murray Cumming  <murrayc@murrayc.com>

	Widget: Added align and margin methods and properties.

	* gtk/src/enums.[hg|ccg]: Added Align enum, wrapping GtkAlign, removing
  our own AlignmentEnum.
	* tools/m4/convert_gtk.m4: Added conversions for the new Align enum.
	* gtk/src/alignment.hg:
	* gtk/src/aspectframe.hg:
	* gtk/src/bin.ccg:
	* gtk/src/bin.hg:
	* gtk/src/entry.hg:
	* gtk/src/frame.hg:
	* gtk/src/label.ccg:
	* gtk/src/label.hg:
	* gtk/src/misc.hg:
	* gtk/src/treeviewcolumn.hg: Use Align instad of AlignmentEnum,
  and ALIGN_START/END instad of ALIGN_LEFT/TOP and ALIGN_RIGHT/BOTTOM.

	* gtk/src/widget.hg: Added get_h_align(), set_h_align(),
  get_v_align(), set_v_align(),
  get_margin_left(), set_margin_left(),
  get_margin_right(), set_margin_right(,
  get_margin_top(), set_margin_top(),
  get_margin_bottom(), set_margin_bottom(). And properties.

  Also remove deprecated size_request(), size_allocate() and
  get_child_requisition() to fix the build.

2010-09-15  Murray Cumming  <murrayc@murrayc.com>

  Regenerate defs and make minor changes.

	* gtk/src/gtk_enums.defs:
	* gtk/src/gtk_methods.defs: Regenerated.
	* gtk/src/cellview.hg: Remove (deprecated) get_size_of_row().
  * gtk/src/spinner.hg: Inherit from Widget instead of DrawingWindow, as now
  in the C API.

2.90.7:

2010-09-15  Murray Cumming  <murrayc@murrayc.com>

	demos: Fix the build.

	* demos/pixbuf-demo.cc:
	* demos/gtk-demo/example_change_display.cc:
	* demos/gtk-demo/example_drawingarea.cc:
	* demos/gtk-demo/example_menus.cc:
	* demos/gtk-demo/example_pixbufs.cc:
	* demos/gtk-demo/example_textview.cc: Adapt to use cairomm instead of
  gdkmm draw_*() and Gdk::GC.
  Remove use of Dialog::set_has_separator().
  Replace use of MenuHelpers.
