@@ -1,5 +1,13 @@
 2010-09-15  Murray Cumming  <murrayc@murrayc.com>
 
+	Demos: Adapt to ALIGN_* rename.
+
+	* demos/gtk-demo/example_colorsel.cc:
+	* demos/gtk-demo/example_sizegroup.cc:
+	* demos/gtk-demo/example_stockbrowser.cc: Fix the build.
+
+2010-09-15  Murray Cumming  <murrayc@murrayc.com>
+
 	WrapBox: Adapt to C API change.
 
 	* gtk/src/wrapbox.[hg|ccg]: insert_child(): Remove the padding parameters
